--- a/[写経] TensorFlowを使った機械学習ことはじめ.ipynb
+++ b/[写経] TensorFlowを使った機械学習ことはじめ.ipynb
@@ -128,47 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "訓練データ\n",
-      "x= [[1. 3.]\n",
-      " [3. 1.]\n",
-      " [5. 7.]]\n",
-      "y= [[190.]\n",
-      " [330.]\n",
-      " [660.]]\n",
-      "\n",
-      " 推定パラメータの推移\n",
-      "step=100, a1=2970.66, a2=3662.66, b=984.67, loss=-11424525.00\n",
-      "step=200, a1=5951.33, a2=7335.32, b=1769.34, loss=-22918782.00\n",
-      "step=300, a1=8931.99, a2=11007.98, b=2554.00, loss=-34413036.00\n",
-      "step=400, a1=11912.66, a2=14680.63, b=3338.67, loss=-45907296.00\n",
-      "step=500, a1=14893.32, a2=18353.29, b=4123.34, loss=-57401548.00\n",
-      "step=600, a1=17873.99, a2=22025.95, b=4908.01, loss=-68895808.00\n",
-      "step=700, a1=20854.65, a2=25698.60, b=5692.68, loss=-80390064.00\n",
-      "step=800, a1=23835.31, a2=29371.26, b=6477.34, loss=-91884320.00\n",
-      "step=900, a1=26815.98, a2=33043.91, b=7262.01, loss=-103378568.00\n",
-      "step=1000, a1=29796.64, a2=36716.57, b=8046.68, loss=-114872832.00\n",
-      "\n",
-      " 学習結果\n",
-      "Estimated: a1=29796.64, a2=36716.57, b=8046.68\n",
-      "\n",
-      " 予測\n",
-      "[[1.]]\n"
+     "ename": "SystemExit",
+     "evalue": "準備中",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 準備中\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "# sys.exit(\"準備中\")\n",
+    "sys.exit(\"準備中\")\n",
     "\n",
     "# 0. ライブラリをロード\n",
     "import numpy as np\n",
